--- a/src/DutchTreat/DutchTreat/DutchTreat.csproj
+++ b/src/DutchTreat/DutchTreat/DutchTreat.csproj
@@ -11,4 +11,8 @@
     <None Remove="wwwroot\css - Copy\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.22" />
+  </ItemGroup>
+
 </Project>
