--- a/src/DutchTreat/DutchTreat/Properties/launchSettings.json
+++ b/src/DutchTreat/DutchTreat/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
-      }
+      },
+      "nativeDebugging": false
     },
     "DutchTreat": {
       "commandName": "Project",
