--- a/src/DutchTreat/DutchTreat/config.json
+++ b/src/DutchTreat/DutchTreat/config.json
@@ -7,5 +7,10 @@
       "Default": "Information",
       "Microsoft": "Warning"
     }
-  }
+  },
+  "Tokens": {
+    "Key": "'a;slkd'a;lskda;lkd;askd'as;kdas;dk;asdk;;l",
+    "Issuer": "http://localhost:8888",
+    "Audience": "http://localhost:8888"
+  }  
 }
